bluejay-parser/tests/snapshots/schema_definition_integration_test__error@referenced_type_is_not_an_input_type.graphql.snap
---
source: bluejay-parser/tests/schema_definition_integration_test.rs
expression: formatted_errors
input_file: bluejay-parser/tests/test_data/schema_definition/error/referenced_type_is_not_an_input_type.graphql
---
Error: Referenced type `MyObject` is not an input type
   ╭─[referenced_type_is_not_an_input_type.graphql:6:19]
   │
 6 │   field(myObject: MyObject!): Int!
   │                   ────┬───  
   │                       ╰───── Not an input type
───╯
